Api for GetAllFilms (#3)
