# week2/docs/swagger.json
@@ -92,6 +92,29 @@
                 }
             }
         },
+        "/films": {
+            "get": {
+                "description": "Get all films",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Film"
+                ],
+                "summary": "Get all films",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.Film"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/films/{id}": {
             "get": {
                 "description": "Get a film with the given ID",
