# week2/internal/controller/http/v1/film_handler.go
@@ -74,3 +74,14 @@ func (handler *FilmHandler) Delete(c *gin.Context) {
 	// No content response on successful deletion (204)
 	c.Status(http.StatusNoContent)
 }
+
+// @Summary Get all films
+// @Description Get all films
+// @Tags Film
+// @Produce  json
+// @Router /films [get]
+// @Success 200 {object} []entity.Film
+func (handler *FilmHandler) GetAll(c *gin.Context) {
+	films := handler.filmService.GetAllFilms(c.Request.Context())
+	c.JSON(http.StatusOK, model.HttpResponse[[]entity.Film]{Message: "Success", Data: &films})
+}
